--- a/php/thank-you.html
+++ b/php/thank-you.html
@@ -28,7 +28,7 @@
       <h1>Спасибо за вклад в развитие нашего музея!</h1>
       <h4>Вы будете автоматически перенаправлены на главную страницу через 3 секунды</h4>
       <script type="text/javascript">
-	    setTimeout('location.replace("index.html")', 3000);
+	    setTimeout('location.replace("../index.php")', 3000);
 	  </script> 
   </body>
 </html>
